RESOLVED FIXED 265039
Fix AudioSourceProviderGStreamer build with !ENABLE(MEDIA_STREAM)
https://bugs.webkit.org/show_bug.cgi?id=265039
Summary Fix AudioSourceProviderGStreamer build with !ENABLE(MEDIA_STREAM)
Olivier Blin
Reported 2023-11-17 07:52:38 PST
WebAudioSourceProvider.h always needs to be included since AudioSourceProviderGStreamer inherits from WebAudioSourceProvider.
Attachments
Olivier Blin
Comment 1 2023-11-17 07:54:07 PST
EWS
Comment 2 2023-11-17 09:53:57 PST
Committed 270898@main (579a9e5c3ee4): <https://commits.webkit.org/270898@main> Reviewed commits have been landed. Closing PR #20674 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.