Fix AudioSourceProviderGStreamer build with !ENABLE(MEDIA_STREAM) https://bugs.webkit.org/show_bug.cgi?id=265039

Reviewed by Philippe Normand.

* Source/WebCore/platform/audio/gstreamer/AudioSourceProviderGStreamer.h:
WebAudioSourceProvider.h always needs to be included since
AudioSourceProviderGStreamer inherits from WebAudioSourceProvider.

Canonical link: https://commits.webkit.org/270898@main